# LISTEN.tui

./: .gitignore  README.md  build.py  config.toml  duration_map.json  install.cmd  listentui.cmd  listentui.sh  mre.py  pyproject.toml  pyproject.toml.poetry  requirements.txt  setup.cfg
.github/workflows/: build.yml  release.yml
listentui/: __init__.py  __main__.py  __main_portable__.py  app.py  config.py  listentui.tcss  log.py  main.py
listentui/app/: __init__.py  app.py
listentui/data/: __init__.py  config.py  theme.py
listentui/downloader/: baseInterface.py  cli_to_api.py  downloader.py  ytdlpDownloadManager.py
listentui/downloader/providers/search/: baseProvider.py  youtubeMusic.py  ytm.py
listentui/listen/: __init__.py  client.py  interface.py  stream.py  types.py  websocket.py
listentui/modules/: baseModule.py  presence.py  types.py
listentui/pages/: base.py  download.py  history.py  home.py  profile.py  search.py  setting.py
listentui/screen/: __init__.py  login.py  main.py  mpvWarning.py  song.py
listentui/screen/modal/: __init__.py  albumScreen.py  artistScreen.py  baseScreen.py  buttons.py  characterScreen.py  confirm.py  confirmScreen.py  messages.py  searchResultPicker.py  selection.py  selectionScreen.py  songScreen.py  sourceScreen.py
listentui/screen/popup/: __init__.py  artist.py  song.py
listentui/utilities/: __init__.py  constant.py  duration_map.py  logger.py
listentui/widgets/: __init__.py  _terminal.py  artistScrollableLabel.py  base.py  buttons.py  containers.py  custom.py  datatable.py  downloadQueueItem.py  durationProgressBar.py  floatingPlayer.py  history.py  info.py  minimalInput.py  mpv.py  mpvThread.py  mpvplayer.py  pageSwitcher.py  player.py  profileTabs.py  removableCollapsible.py  scrollableLabel.py  scrollableLabel2.py  search.py  setting.py  songContainer.py  songListView.py  songMetadataDisplay.py  topbar.py  user.py  vanityBar.py  vignette.py  websocket.py
src/: config.py  interface.py  log.py  main.py  module.py
src/display/: display.py
src/listen/: client.py  stream.py  types.py  websocket.py
src/module/: listen_ws.py  presence.py  types.py
src/modules/: baseModule.py  presence.py  types.py
test/: client_test.py
utils/: build.py
