[tool.poetry]
name = "listentui"
version = "1.2.0"
description = "a LISTEN.moe tui application"
authors = ["kwevin <kwevinnotdev@gmail.com>"]
readme = "README.md"
exclude = ["utils/build.py"]

[tool.poetry.dependencies]
python = "^3.11,<3.12"
gql = {extras = ["aiohttp", "requests"], version = "^3.4.1"}
psutil = "^5.9.5"
pypresence = "^4.3.0"
python-mpv = "^1.0.4"
readchar = "^4.0.5"
rich = "^13.5.2"
tomli = "^2.0.1"
tomli-w = "^1.0.0"
websockets = "^11.0.3"
markdownify = "^0.11.6"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
isort = "^5.12.0"
pyinstaller = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
listentui = 'listentui.__main__:run'