[project]
name = "listentui"
version = "2.0.0"
description = "A LISTEN.moe TUI"
authors = []
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "async-lru>=2.0.5",
    "frozendict>=2.4.6",
    "gql[aiohttp]>=3.5.2",
    "markdownify>=1.1.0",
    "mutagen>=1.47.0",
    "pypresence>=4.3.0",
    "python-mpv>=1.0.7",
    "pytz>=2025.2",
    "rich>=14.0.0",
    "textual[syntax]>=3.0.1",
    "tomli>=2.2.1",
    "tomli-w>=1.2.0",
    "websockets>=15.0.1",
    "xdg>=6.0.0",
    "yt-dlp>=2025.3.31",
    "ytmusicapi>=1.10.3",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.12.0",
    "pyinstrument>=5.0.1",
    "ruff>=0.11.4",
    "textual-dev>=1.7.0",
]

[tool.pyright]
exclude = [
    "**/_legacy",
    "**/.venv",
    "**/node_modules",
    "**/__pycache__",
    "**/.*",
]

[tool.ruff.lint]
preview = true
select = [
    "E",
    "F",
    "I",
    "N",
    "B",
    "Q",
    "ASYNC",
    "A",
    "COM",
    "C4",
    "G",
    "PIE",
    "RET",
    "SIM",
    "PL",
    "PERF",
    "FURB",
    "LOG",
    "RUF",
    "TID",
]

[tool.ruff]
target-version = "py313"
line-length = 120
ignore = [
    "PLR6301",
    "F401",
    "N999",
    "G004",
    "COM812",
    "PLW3201",
    "PLR0904",
    "PLR0912",
    "PLR0913",
    "PLR0917",
    "PLR0914",
]
